--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,12 @@
 	<artifactId>mysql-connector-java</artifactId>
 	<version>5.1.38</version>
 </dependency>
-
+      <dependency>
+         <groupId>com.googlecode.json-simple</groupId>
+         <artifactId>json-simple</artifactId>
+         <version>1.1.1</version>
+         <type>jar</type>
+      </dependency>
    </dependencies>
        <build>
     <plugins>
