--- a/pom.xml
+++ b/pom.xml
@@ -22,11 +22,17 @@
           <artifactId>chatter-bot-api</artifactId>
           <version>1.3.3</version>
       </dependency>
-     <dependency>
-       <groupId>sx.blah</groupId>
-       <artifactId>Discord4J</artifactId>
-       <version>2.0.1</version>
-     </dependency>
+<dependency>
+    <groupId>net.dv8tion</groupId>
+    <artifactId>JDA</artifactId>
+    <version>1.2.0_91</version>
+</dependency>
+<dependency>
+	<groupId>com.google.code.gson</groupId>
+	<artifactId>gson</artifactId>
+	<version>2.5</version>
+</dependency>
+
       <dependency>
          <groupId>1</groupId>
          <artifactId>1</artifactId>
