--- a/pom.xml
+++ b/pom.xml
@@ -6,15 +6,15 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <repositories>
-     <repository>
-       <snapshots>
-         <enabled>false</enabled>
-       </snapshots>
-       <id>bintray-austinv11-maven</id>
-       <name>bintray</name>
-       <url>http://dl.bintray.com/austinv11/maven</url>
-     </repository>
-   </repositories>
+        <repository>
+            <id>letece</id>
+            <url>http://lutece.paris.fr/nexus/content/repositories/lutece_third_party</url>
+        </repository>
+        <repository>
+            <id>DV8FromTheWorld</id>
+            <url>https://github.com/DV8FromTheWorld/Maven-Repository/raw/master/repo</url>
+        </repository>
+    </repositories>
 
    <dependencies>
       <dependency>
@@ -25,7 +25,7 @@
 <dependency>
     <groupId>net.dv8tion</groupId>
     <artifactId>JDA</artifactId>
-    <version>1.2.1_106</version>
+    <version>1.2.2_139</version>
 </dependency>
 <dependency>
 	<groupId>com.google.code.gson</groupId>
