--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,12 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <repositories>
-        <repository>
-            <id>letece</id>
-            <url>http://lutece.paris.fr/nexus/content/repositories/lutece_third_party</url>
-        </repository>
-        <repository>
-            <id>DV8FromTheWorld</id>
-            <url>https://github.com/DV8FromTheWorld/Maven-Repository/raw/master/repo</url>
-        </repository>
+
+          <repository>
+            <id>central</id>
+            <name>bintray</name>
+            <url>http://jcenter.bintray.com</url>
+          </repository>
     </repositories>
 
    <dependencies>
@@ -25,7 +23,7 @@
 <dependency>
     <groupId>net.dv8tion</groupId>
     <artifactId>JDA</artifactId>
-    <version>1.2.2_139</version>
+    <version>1.3.0_188</version>
 </dependency>
 <dependency>
 	<groupId>com.google.code.gson</groupId>
